finished mechanics i hope

--- a/assets/scenes/test.ini
+++ b/assets/scenes/test.ini
@@ -1,5 +1,5 @@
 [Scene]
 #0 = ConfigurableEntity 0.7 2 0 test
 #1 = ConfigurableEntity 0.5 0.5 0.0 test
-2 = ConfigurableEntity 0 -2 0 wall
+#2 = ConfigurableEntity 0 -2 0 wall
 3 = PlayerSpawnEntity 0 0 0
